Fixed image/text wrap issue

--- a/wp-content/themes/accelerated-theme-child/style.css
+++ b/wp-content/themes/accelerated-theme-child/style.css
@@ -1303,10 +1303,17 @@ section.featured-work {
 	text-align: center;
 }
 
-.page.hfeed.site {
+/* .page.hfeed.site {
 
     background: url("img/taxi-photo.jpg") no-repeat scroll left center / cover rgba(0, 0, 0, 0);
-}
+} */
+
+img.alignright { float: right; margin: 0 0 1em 1em; }
+img.alignleft { float: left; margin: 0 1em 1em 0; }
+img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
+.alignright { float: right; }
+.alignleft { float: left; }
+.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 
 
 
